# traffic-sim-testing

./: .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  release-please-config.json  rusfmt.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: backend.yml  bridge.yml  frontend.yml  general.yaml
.github/workflows/: build.yml  lint.yml  publish.yml  release-please.yml  release.yml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/commands/: greet.rs
backend/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
backend/include/: backend.h
backend/src/: backend.cpp
bridge/: .gitignore  Cargo.toml  build.rs
bridge/src/: ffi.rs  lib.rs
bridge/src/api/: greet.rs
bridge/src/ffi/: greet.rs
bridge/src/models/: greet.rs
bridge/src/services/: greet.rs
frontend/: .gitignore  eslint.config.js  package-lock.json  package.json
frontend/src/: App.css  App.tsx
